# OmniLauncher

./: .gitignore  AGENTS.md  LICENSE  PROJECT_DOSSIER.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  setup.ps1  setup.sh  svelte.config.js  vite.config.js
.zcode/plans/: plan-sess_64847ade-f7b4-4433-ac77-fc5fba53a928.md
models/: README.md
src/: AppShell.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: download_manager.rs  gguf.rs  hardware.rs  hf_auth.rs  huggingface.rs  lib.rs  logging.rs  main.rs  monitor.rs  paths.rs  process.rs  proxy.rs  registry.rs  sidecar.rs
src-tauri/src/commands/: app_settings.rs  flags.rs  hardware.rs  huggingface.rs  mod.rs  models.rs  process.rs  proxy.rs  registry.rs
src-tauri/src/db/: mod.rs  pool.rs  registry_ops.rs  registry_schema.rs  seed.rs  system_schema.rs
src-tauri/tests/: proxy_integration.rs  real_launch.rs  spawn_check.rs
src/components/: ChatModelCard.svelte  EmbeddingModelCard.svelte  HfBrowser.svelte  HfFileRow.svelte  LocalLibrary.svelte  LocalModelCard.svelte  ModelCard.svelte  NavRail.svelte
src/lib/: commands.js  format.js  stores.svelte.js  types.js
src/pages/: Loader.svelte  Models.svelte  Settings.svelte
