[package]
name = "omnilauncher"
version = "0.1.0"
description = "OmniLauncher — a Tauri-based launcher for CUDA llama-server"
authors = ["OmniLauncher"]
edition = "2021"
rust-version = "1.95"

# Library target (Tauri v2 convention: lib.rs holds run(), main.rs is thin).
[lib]
name = "omnilauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.11", features = [] }
tauri-plugin-log = "2.8"
# Opens external URLs in the user's default system browser. Used by the JS API
# (`@tauri-apps/plugin-opener`'s `openUrl`) to send the user to the HuggingFace
# device-code verification page. Required because Tauri intercepts `window.open`
# and `<a target="_blank">` for its own webview, not the OS browser.
tauri-plugin-opener = "2"

# Logging facade (tauri-plugin-log is built on this)
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite (WAL mode, pooled via deadpool).
# NOTE: rusqlite must match deadpool-sqlite's requirement exactly (0.38 for
# deadpool-sqlite 0.13) so both resolve to a single libsqlite3-sys copy.
# The "bundled" feature compiles SQLite from source, guaranteeing a modern
# version regardless of the host system library.
rusqlite = { version = "0.38", features = ["bundled"] }
deadpool-sqlite = "0.13"

# Error handling
anyhow = "1.0"

# Hardware detection
# - nvml-wrapper: NVIDIA GPU name + VRAM (dynamically loads libnvidia-ml.so.1
#   from the driver; fails cleanly to None on CPU-only hosts).
# - sysinfo: total system RAM + CPU physical/logical core counts.
nvml-wrapper = "0.12"
sysinfo = "0.39"

# Async runtime (used by deadpool + the axum proxy)
tokio = { version = "1.52", features = ["full"] }

# Reverse proxy (Layer 4). axum 0.8 sits on hyper 1.x; reqwest is the
# forwarder. `default-features = false` keeps the proxy lean.
# - `rustls-tls` guarantees HTTPS for outbound HuggingFace API calls (search
#   and model downloads). The proxy itself only talks to http://127.0.0.1,
#   but the HF browser needs TLS to huggingface.co.
# - `stream` is required for response.bytes_stream() → SSE pass-through AND
#   for chunked model-download progress reporting.
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["http2", "rustls", "stream", "json", "query", "form"] }
# URL percent-encoding/decoding. Used to decode the HF pagination cursor from
# the `link` header before reqwest re-encodes it, preventing double-encoding.
# Already resolved transitively via reqwest/url; declared directly for clarity.
percent-encoding = "2"

# OS-native secret storage for the HuggingFace API token.
# The token never touches the SQLite DB or disk in plaintext.
#
# keyring v3 has NO default backend — without an explicit platform feature it
# silently uses an in-memory mock store that returns Ok on every operation but
# persists nothing (the token vanishes on process exit). The target-conditional
# sections below enable the real OS backends:
#   - Linux:   sync-secret-service  (GNOME Keyring / KWallet via D-Bus Secret Service)
#   - Windows: windows-native       (Credential Manager)
# On headless Linux without a keyring daemon, set_password returns an error
# which the auth layer surfaces (the app continues in anonymous mode).

# libc: used by the sidecar controller for kill() syscalls (Linux only).
libc = "0.2"

# ── Platform-conditional dependencies ──

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]

[features]
# This feature is required by cargo-tauri to enable release-mode optimizations
# on deps even on debug builds (much faster llama-server spawning etc.).
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
